compiler/test/fail_compilation/e15876_2.d
/*
TEST_OUTPUT:
---
fail_compilation/e15876_2.d(8): Error: identifier expected following `template`
---
*/
o[{template
